add publisher name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "java-snippets-by-anr",
+    "publisher": "NikhilReddy",
     "displayName": "anr's java snippets",
     "description": "java snippets by Nikhil Reddy",
     "version": "0.0.1",
